--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"currentTestResult":null,"workingDirectory":"C:\\Users\\Bhargavi\\MissionRnDProjects\\CBasicsNew"}
+{"gitStatus":"REPO_CREATED","testStatus":0,"submitStatus":0,"currentTestResult":false,"workingDirectory":"C:\\Users\\Bhargavi\\MissionRnDProjects\\CBasicsNew"}
